Fix line breaks in headings' code snippets

--- a/src/design.scss
+++ b/src/design.scss
@@ -166,6 +166,7 @@ a {
   display: -webkit-flex;
   display: flex;
   flex-wrap: wrap;
+  justify-content: space-around;
   width: 100%;
 }
 
